1,remove部分非8api